<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory
            android:title="@string/account_preferences">

        <PreferenceScreen
                android:title="@string/title_user_profile_preference"
                android:summary="@string/summary_user_profile_preference">

            <intent 
            android:targetPackage="com.example.lab2"
            android:targetClass="com.example.lab2.ProfileActivity"
            android:action="com.example.lab2.PREFS_ONE" />

        </PreferenceScreen>
                
        <CheckBoxPreference
                android:key="checkbox_preference"
                android:title="@string/title_checkbox_preference"
                android:summary="@string/summary_checkbox_preference" />

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/account_settings_preferences">
                
        <ListPreference
                android:key="list_preference"
                android:title="@string/title_list_preference"
                android:summary="@string/summary_list_preference"
                android:entries="@array/entries_list_preference"
                android:entryValues="@array/entryvalues_list_preference"
                android:dialogTitle="@string/title_list_preference" />
        
        <EditTextPreference
                android:key="edittext_preference"
                android:title="@string/title_edittext_preference"
                android:summary="@string/summary_edittext_preference"
                android:dialogTitle="@string/title_edittext_preference" />        

    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/misc_preferences">

        <PreferenceScreen
                android:title="@string/title_intent_preference"
                android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.cs.dartmouth.edu/~campbell" />

        </PreferenceScreen>

    </PreferenceCategory>    

</PreferenceScreen>