<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/start_input_type_title" >
    </TextView>
    
    <Spinner
        android:id="@+id/spinnerInputType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/start_input_type_entries" >
    </Spinner>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/start_activity_type_title" >
    </TextView>
    
    <Spinner
        android:id="@+id/spinnerActivityType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:entries="@array/start_activity_type_entries" >
    </Spinner>
    
    <LinearLayout 
    	android:layout_width="match_parent" 
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="center">
    
    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onStartClicked"
        android:text="@string/start_button_start_title" />
        
    <Button
        android:id="@+id/btnSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onSyncClicked"
        android:text="@string/start_button_sync_title" />
    </LinearLayout>
    
</LinearLayout>
